anchor tag added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1> Git Local Repository Example </h1>
         <ul>
-            <li> CSE </li>
+            <li><a href="#"> CSE </a> </li>
             <li> ECE </li>
             <li> CE </li>
         </ul>
