red color added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title> Git Example </title>
     </head>
-    <body bgcolor="blue">
+    <body bgcolor="red">
         <h1> Git Local Repository Example </h1>
         <ul>
             <li><a href="#"> CSE </a> </li>
